# AcquireML

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
acquireml/: __init__.py  cli.py  compare.py  demo.py  engine.py  explain.py  explore.py  generic_loader.py  loader.py  recommend.py  round_report.py  session.py  session_cli.py  strategies.py  validate.py
acquireml/api/: app.py  schemas.py  store.py
docs/: index.html
docs/superpowers/plans/: 2026-07-10-azm-recall-threshold-tuning.md  2026-07-19-web-ui-backend-api.md  2026-07-21-web-ui-frontend-foundation.md
docs/superpowers/specs/: 2026-07-10-azm-recall-threshold-tuning-design.md  2026-07-12-landing-page-design.md  2026-07-19-web-ui-design.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.test.tsx  App.tsx
frontend/src/api/: client.test.ts  client.ts
frontend/src/pages/: NewSessionPage.module.css  NewSessionPage.test.tsx  NewSessionPage.tsx  SessionListPage.module.css  SessionListPage.test.tsx  SessionListPage.tsx
frontend/src/styles/: global.css  tokens.css
tests/: test_api_app.py  test_api_schemas.py  test_api_store.py  test_demo.py  test_engine.py  test_explain.py  test_generic_loader.py  test_loader.py  test_recommend.py  test_round_report.py  test_session.py  test_validate.py
