[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acquireml"
version = "0.1.0"
description = "Autonomous Active Learning Engine for genomic experiment optimization"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "active-learning",
    "genomics",
    "bioinformatics",
    "bayesian-optimization",
    "antibiotic-resistance",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "rich>=13.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
acquireml = "acquireml.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["acquireml*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
